[gd_scene load_steps=5 format=3 uid="uid://crlvherxqfwwx"]

[ext_resource type="Script" path="res://watergun.gd" id="1_s74k1"]
[ext_resource type="Texture2D" uid="uid://cbhgxyju6x6h" path="res://Textures/wand.png" id="2_t6fca"]
[ext_resource type="AudioStream" uid="uid://p2t8xqrkvvre" path="res://Sounds/whoosh-fire.mp3" id="3_xbxjs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ds804"]
radius = 1500.0

[node name="watergun" type="Area2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_s74k1")

[node name="shootTime" type="Timer" parent="."]
process_callback = 0
wait_time = 0.6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(36, 2)
shape = SubResource("CircleShape2D_ds804")

[node name="pivot" type="Marker2D" parent="."]

[node name="watergun" type="Sprite2D" parent="pivot"]
position = Vector2(195, 2)
scale = Vector2(1.94892, 1.84375)
texture = ExtResource("2_t6fca")

[node name="shootPoint" type="Marker2D" parent="pivot/watergun"]
unique_name_in_owner = true
position = Vector2(45.3002, -3.88793)

[node name="pop" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_xbxjs")
volume_db = -38.205

[node name="multishootTime" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="shootTime" to="." method="_on_shoot_time_timeout"]
[connection signal="finished" from="pop" to="." method="_on_pop_finished"]
[connection signal="timeout" from="multishootTime" to="." method="_on_multishoot_time_timeout"]
